Remove created by and add it on copyright

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,7 @@
         <p class="author"></p>
       </div>
 
-      <p class="created-by">Coded by: Alex Dingal</p>
     </div>
-    <p class="copyright">Copyright &copy; <span class="year"></span></p>
+    <p class="copyright">Copyright &copy; <span class="year"></span> adingal</p>
   </body>
 </html>
